Revert "fuzzy finder: fix actions tab footer alignment"
This reverts commit c5d8bb446bcf9b8d809c5f628e85cc59dd7d1c92.

--- a/client/web/src/components/fuzzyFinder/FuzzyModal.module.scss
+++ b/client/web/src/components/fuzzyFinder/FuzzyModal.module.scss
@@ -24,9 +24,21 @@
     flex-direction: row-reverse;
     justify-content: space-between;
     align-items: center;
-    padding: 0.5rem 1rem 0;
+    padding: 0.5rem 1rem 0; // stylelint-disable-next-line declaration-property-unit-allowed-list
     margin-bottom: -1px;
     z-index: 1;
+}
+
+.divider {
+    width: 100%; // stylelint-disable-next-line declaration-property-unit-allowed-list
+    height: 1px;
+    background-color: var(--border-color);
+    margin-bottom: 0.5rem;
+    z-index: 0;
+
+    &.mb-0 {
+        margin-bottom: 0;
+    }
 }
 
 .shortcut {
@@ -47,6 +59,7 @@
 .results {
     flex: 1;
 
+    // stylelint-disable-next-line scss/selector-no-redundant-nesting-selector
     & p {
         padding: 1rem;
     }
@@ -92,7 +105,8 @@
     display: flex;
     align-items: center;
     width: 100%;
-    padding: 0.75rem 1rem;
+    justify-content: space-between;
+    padding: 0 1rem 0.75rem;
 }
 
 .keyboard-explanation {
@@ -154,6 +168,9 @@
     gap: 0.5rem;
 }
 
+.right-aligned {
+    text-align: right;
+}
 .tab-centered-text {
     text-align: center;
 }
